<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, AlarmManager!</string>
    <string name="app_name">AlarmManager用法</string>
	<string name="time">00:00</string>
	<string name="text_activity">活动Activity</string>
	<string name="text_receiver">广播BroadCast</string>
	<string name="text_service">服务Service</string>
	<string name="text_intentservice">服务IntentService</string>
	<string name="cancelAlarm">取消闹钟</string>
	<string name="enter">点击进入</string>
	<string name="str_getthum">获取缩略图</string>
</resources>
